# aidebates

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt  template.env
flagged/: log.csv
notebooks/: aidebate.ipynb
src/: app.py  config.py
src/debates/: round.py
src/gradio/: callbacks.py  stream.py
