[tool.poetry]
name = "aidebates"
version = "0.0.1"
description = "AI Debates for AmpCamp 2023"
authors = ["Denis Volk <the.denis.volk@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = []


[tool.poetry.dependencies]
python = "3.10.*"
python-dotenv = "^1.0"
requests = "^2.28"
numpy = "^1.24"
retry = "^0.9"
python-dateutil = "^2.8"
pandas = "^2.1"
scikit-learn = "^1.3"
pydantic = "^2.0"
pre-commit = "^3.3"
pylint = "^2.17"
flake8 = "^6.0"
mypy = "^1.2"
isort = "^5.12"
black = "^23.3"
types-requests = "^2.28"
types-retry = "^0.9"
types-pyyaml = "^6.0"
types-python-dateutil = "^2.8"
jupyterlab = "^4.0"
ipykernel = "^6.22"
matplotlib = "^3.7"
seaborn = "^0.12"
ipympl = "^0.9"
plotly = "^5.14"
tqdm = "^4.65"
pylint-pydantic = "^0.2"
pydeps = "^1.12"
pytest = "^7.3"
gradio = ">=4.9"
openai = "^0.28"
langchain = "^0.0"
scipy = ">=1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line_length = 119
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | notebooks
    | \.ipynb_checkpoints
    | __pycache__
    | data
    | logs
    | _build
    | buck-out
    | build
    | dist
    | snapshots
  )/
)
'''